# opsloom-deep-research

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  docker-entrypoint.sh  env.example  langgraph.json  package-lock.json  package.json  pyproject.toml  server.py
backend/: app.py
backend/api/: router.py
backend/config/: dev-config.ini  local-config.ini
backend/lib/: app_config.py  exceptions.py
backend/util/: auth_utils.py  (+6 more)
db/: env.py  start_postgres.sh  stop_postgres.sh
docs/: .gitignore
examples/hotel_app/: .gitignore  README.md  alembic.ini  env.example  good_advice.md  main.py  pyproject.toml  to_do.txt
examples/hotel_app/api_docs/: bruno.json  create reservation.bru  create service order.bru  delete all service orders for res.bru  delete reservation.bru  delete service order.bru  get reservations for guest.bru  get service by id.bru  list service orders for reservation.bru  list services.bru  modify reservation.bru
examples/hotel_app/api_docs/environments/: local.bru
examples/hotel_app/backend/: app.py
examples/hotel_app/backend/db/: db_init.py  models.py  session.py
examples/hotel_app/backend/db/repositories/: guest.py  message.py  reservation.py  room.py  service.py  service_order.py  session.py
examples/hotel_app/backend/routes/: reservations.py  service_orders.py
examples/hotel_app/backend/schemas/: guest.py  message.py  reservation.py  room.py  service.py  session.py
examples/hotel_app/backend/services/: auth.py  auth_exceptions.py  reservation.py  service_orders.py  session.py
examples/hotel_app/db/: env.py  start_postgres.sh  stop_postgres.sh
examples/hotel_app/db/versions/: 001_add_tables.py  002_seed_rooms_and_services.py  003_seed_guests.py
examples/hotel_app/tests/: conftest.py
examples/hotel_app/tests/db_tests/: test_guest.py  test_messages.py  test_reservations.py  test_rooms.py  test_services.py  test_session.py
examples/hotel_app/tests/service_tests/: test_auth.py  test_reservations.py  test_service_orders.py  test_session.py
frontend/: Dockerfile  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
tests/: conftest.py
(+181 files in other folders)
